--- a/LicentaApp/Views/Utilizatori/Edit.cshtml
+++ b/LicentaApp/Views/Utilizatori/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model LicentaApp.Utilizatori
+﻿@using LicentaApp.Domain
+@model LicentaApp.Utilizatori
 
 @{
     ViewBag.Title = "Edit";
@@ -8,14 +9,14 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-        <div class="form-horizontal">
-            <h4>Actualizeaza</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
 
-            @Html.EditorForModel()
+    <div class="form-horizontal">
+        <h4>Actualizeaza</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
+        @Html.EditorForModel(new { Action = AppConstants.CRUD.Edit })
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
