--- a/LicentaApp/Views/Shared/EditorTemplates/Clienti.cshtml
+++ b/LicentaApp/Views/Shared/EditorTemplates/Clienti.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="col m4 input-field">
             @Html.TextBoxFor(model => model.DataNastere, "{0:dd/MM/yyyy}", new {  @class="datepicker" })
-            @Html.LabelFor(model => model.DataNastere, "Data Nasteree")
+            @Html.LabelFor(model => model.DataNastere, "Data Nastere")
         </div>
     </div>
 
