--- a/LicentaApp/Views/Rapoarte/TopProfesii.cshtml
+++ b/LicentaApp/Views/Rapoarte/TopProfesii.cshtml
@@ -6,7 +6,12 @@
 }
 
 <div class="row">
-    <h4 class="report-title">Statistica in functie de profesii</h4>
+    <div class="col m11">
+        <h4 class="report-title">Statistica in functie de profesii</h4>
+    </div>
+    <div class="col m1">
+        <a class="btn-floating btn-large chart-url-icon waves-effect waves-light red" href="@Url.Action("TopProfesii_Grafic")"><i class="fas fa-chart-bar fa-2x"></i></a>
+    </div>
 </div>
 @using (Ajax.BeginForm("TopProfesii_Data", "Rapoarte", new AjaxOptions { UpdateTargetId = "report-container", InsertionMode = InsertionMode.Replace }))
 {
