--- a/LicentaApp/Views/Utilizatori/Index.cshtml
+++ b/LicentaApp/Views/Utilizatori/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col s11">
-        <h3>Comenzi</h3>
+        <h3>Utilizatori</h3>
     </div>
     <div class="col s1">
         @Html.Partial("_FloatingButton", new Tuple<string, string>(Url.Action("Inregistreaza", "Utilizatori"), "Adauga"))
