--- a/LicentaApp/Views/Home/Admin.cshtml
+++ b/LicentaApp/Views/Home/Admin.cshtml
@@ -10,7 +10,7 @@
     <div class="col s12 m3">
         <div class="card setting-card">
             <div class="card-image">
-                <img src="../../Bundles/Content/Images/network.png">
+                <img src="@Url.Content("~/Bundles/Content/Images/network.png")">
                 <span class="card-title">Utilizatori</span>
                 <a href="@Url.Action("Index","Utilizatori")" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
             </div>
@@ -19,7 +19,7 @@
     <div class="col s12 m3">
         <div class="card setting-card">
             <div class="card-image">
-                <img src="../../Bundles/Content/Images/online-store.png">
+                <img src="@Url.Content("~/Bundles/Content/Images/online-store.png")">
                 <span class="card-title">Magazine</span>
                 <a href="@Url.Action("Index","Magazine")" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
             </div>
@@ -28,7 +28,7 @@
     <div class="col s12 m3">
         <div class="card setting-card">
             <div class="card-image">
-                <img src="../../Bundles/Content/Images/delivery-truck.png">
+                <img src="@Url.Content("~/Bundles/Content/Images/delivery-truck.png")">
                 <span class="card-title">Furnizori</span>
                 <a href="@Url.Action("Index","Furnizori")" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
             </div>
