--- a/LicentaApp/Views/Produse/Index.cshtml
+++ b/LicentaApp/Views/Produse/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="col s12 m4">
         <div class="card setting-card">
             <div class="card-image">
-                <img src="../../Bundles/Content/Images/lens.png">
+                <img src="@Url.Content("~/Bundles/Content/Images/lens.png")">
                 <span class="card-title">Lentile</span>
                 <a href="@Url.Action("ListaLentile","Produse")" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
             </div>
@@ -19,7 +19,7 @@
     <div class="col s12 m4">
         <div class="card setting-card">
             <div class="card-image">
-                <img src="../../Bundles/Content/Images/reading-glasses.png">
+                <img src="@Url.Content("~/Bundles/Content/Images/reading-glasses.png") ">
                 <span class="card-title">Rame</span>
                 <a href="@Url.Action("ListaRame","Produse")" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
             </div>
@@ -28,7 +28,7 @@
     <div class="col s12 m4">
         <div class="card setting-card">
             <div class="card-image">
-                <img src="../../Bundles/Content/Images/sunglasses.png">
+                <img src="@Url.Content("~/Bundles/Content/Images/sunglasses.png")">
                 <span class="card-title">Ochelari de Soare</span>
                 <a href="@Url.Action("ListaOchelariDeSoare","Produse")" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
             </div>
