--- a/LicentaApp/Views/Rapoarte/TopLentileVandute.cshtml
+++ b/LicentaApp/Views/Rapoarte/TopLentileVandute.cshtml
@@ -20,5 +20,5 @@
 </div>
 
 @section Scripts{
-    <script type="text/javascript" src="../../Bundles/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script type="text/javascript" src="@Url.Content("~/Bundles/Scripts/jquery.unobtrusive-ajax.min.js")"></script>
 }
