--- a/LicentaApp/Views/Shared/Produse/ListaRameData.cshtml
+++ b/LicentaApp/Views/Shared/Produse/ListaRameData.cshtml
@@ -7,25 +7,21 @@
         <tr>
             <th>
                 Cod
-                <input type="text" name="filter.Cod" id="filter_Cod" />
 
             </th>
             <th>
                 Denumire
-                <input type="text" name="filter.Denumire" id="filter_Denumire" />
 
             </th>
             <th>
                 Discount
-                <input type="text" name="filter.Discount" id="filter_Discount" />
 
             </th>
             <th>
                 Pret
-                <input type="text" name="filter.Pret" id="filter_Pret" />
             </th>
-            <th style="min-width: 150px;">
-                <a id="filtreaza" class="btn-floating btn-small waves-effect waves-light red"><i class="fas fa-search"></i></a>
+            <th style="width: 150px;">
+                <a class="waves-effect waves-light btn modal-trigger" href="#filtru">Aplica filtre</a>
             </th>
         </tr>
 
