--- a/LicentaApp/Views/Produse/ListaRame.cshtml
+++ b/LicentaApp/Views/Produse/ListaRame.cshtml
@@ -16,13 +16,41 @@
 
 @using (Ajax.BeginForm("FiltreazaListaRame", "Produse", new AjaxOptions { UpdateTargetId = "lista-rame-data", InsertionMode = InsertionMode.ReplaceWith }))
 {
+    <!-- Modal Structure -->
+    <div id="filtru" class="modal">
+        <div class="modal-content">
+            <h4>Filtre</h4>
+            <div class="row">
+                <div class="input-field col m3">
+                    <input type="text" name="filter.Cod" id="filter_Cod" />
+                    <label for="filter_Cod">Cod</label>
+                </div>
+                <div class="input-field col m3">
+                    <input type="text" name="filter.Denumire" id="filter_Denumire" />
+                    <label for="filter_Denumire">Denumire</label>
+                </div>
+                <div class="input-field col m3">
+                    <input type="text" name="filter.Discount" id="filter_Discount" />
+                    <label for="filter_Discount">Discount</label>
+                </div>
+                <div class="input-field col m3">
+                    <input type="number" name="filter.Pret" id="filter_Pret" />
+                    <label for="filter_Pret">Pret</label>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <a id="filtreaza" class="modal-close waves-effect waves-green btn">Aplica</a>
+        </div>
+    </div>
+
     @Html.Partial("Produse/ListaRameData", this.Model)
 }
 
 
 
 @section Scripts{
-    <script type="text/javascript" src="../../Bundles/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script type="text/javascript" src="@Url.Content("~/Bundles/Scripts/jquery.unobtrusive-ajax.min.js")"></script>
     <script type="text/javascript">
 
         $(document).ready(function () {
@@ -46,7 +74,7 @@
         }
 
         function filtreaza() {
-            $('#filtreaza').click(function() {
+            $('#filtreaza').click(function () {
                 $('form').submit();
             });
         }
