--- a/LicentaApp/Views/Rapoarte/StatisticaMagazinDupaVanzari_Grafic.cshtml
+++ b/LicentaApp/Views/Rapoarte/StatisticaMagazinDupaVanzari_Grafic.cshtml
@@ -1,5 +1,4 @@
-﻿@model System.Data.Entity.Core.Objects.ObjectResult<GetStatisticaMagazineDupaVanzari_Result>
-
+﻿
 @{
     ViewBag.Title = "StatisticaMagazinDupaVanzari_Grafic";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -20,7 +19,9 @@
 @section Scripts{
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script>
-        var model = @Html.Raw(Json.Encode(this.Model));
+
+        var dataTable = {};
+        google.charts.load('current', { packages: ['corechart'] });
 
         function createDataTable(items) {
             var result = [];
@@ -32,28 +33,7 @@
 
             return result;
         }
-
-        var dataTable = createDataTable(model);
-        google.charts.load('current', { packages: ['corechart'] });
-        google.charts.setOnLoadCallback(drawChart);
-
-
-        //function drawChart() {
-        //    var data = google.visualization.arrayToDataTable(dataTable);
-
-        //    var options = {
-        //        chart: {
-        //            title: 'Statistica Magazine in functie de Vanzari'
-        //        },
-        //        hAxis: {
-        //            format: 'decimal'
-        //        },
-        //        bars: 'horizontal'
-        //    };
-        //    var materialChart = new google.charts.Bar(document.getElementById('statistica-grafic'));
-        //    materialChart.draw(data, google.charts.Bar.convertOptions(options));
-        //}
-
+         
         function drawChart() {
             var data = google.visualization.arrayToDataTable(dataTable);
 
