--- a/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaVanzari.cshtml
+++ b/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaVanzari.cshtml
@@ -24,6 +24,6 @@
 </div>
 
 @section Scripts{
-    <script type="text/javascript" src="../../Bundles/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script type="text/javascript" src="@Url.Content("~/Bundles/Scripts/jquery.unobtrusive-ajax.min.js")"></script>
 }
 
