--- a/LicentaApp/Views/Rapoarte/TopProfesii.cshtml
+++ b/LicentaApp/Views/Rapoarte/TopProfesii.cshtml
@@ -39,6 +39,6 @@
 
 
 @section Scripts{
-    <script type="text/javascript" src="../../Bundles/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script type="text/javascript" src="@Url.Content("~/Bundles/Scripts/jquery.unobtrusive-ajax.min.js")"></script>
 }
 
