--- a/LicentaApp/Views/Rapoarte/TopRameVandute.cshtml
+++ b/LicentaApp/Views/Rapoarte/TopRameVandute.cshtml
@@ -21,5 +21,5 @@
 </div>
 
 @section Scripts{
-    <script type="text/javascript" src="../../Bundles/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script type="text/javascript" src="@Url.Content("~/Bundles/Scripts/jquery.unobtrusive-ajax.min.js")"></script>
 }
