--- a/LicentaApp/Views/Shared/Produse/ListaLentileData.cshtml
+++ b/LicentaApp/Views/Shared/Produse/ListaLentileData.cshtml
@@ -8,36 +8,24 @@
         <tr>
             <th>
                 Cod
-                <input type="text" name="filter.Cod" id="filter_Cod" />
             </th>
             <th>
                 Denumire
-                <input type="text" name="filter.Denumire" id="filter_Denumire" />
             </th>
             <th>
                 Discount
-                <input type="text" name="filter.Discount" id="filter_Discount" />
             </th>
             <th>
                 Tip Lentila
-                <select name="filter.TipLentila" id="filter_TipLentila">
-                    <option value="">Selecteaaza</option>
-                    @foreach (var item in typeof(TipLentila).ToSelectList())
-                    {
-                        <option value="@item.Value">@item.Text</option>
-                    }
-                </select>
             </th>
             <th>
                 Indice Refractie
-                <input type="number" name="filter.IndiceRefractie" id="filter_IndiceRefractie" />
             </th>
             <th>
                 Pret
-                <input type="number" name="filter.Pret" id="filter_Pret" />
             </th>
-            <th style="min-width: 150px;">
-                <a id="filtreaza" class="btn-floating btn-small waves-effect waves-light red"><i class="fas fa-search"></i></a>
+            <th style="width: 150px;">
+                <a class="waves-effect waves-light btn modal-trigger" href="#filtru">Aplica filtre</a>
             </th>
         </tr>
         <tbody>
