--- a/LicentaApp/Views/Rapoarte/ComparatieMagazineDupaVanzari_Grafic.cshtml
+++ b/LicentaApp/Views/Rapoarte/ComparatieMagazineDupaVanzari_Grafic.cshtml
@@ -27,15 +27,14 @@
 @Html.Partial("Rapoarte/_ReportButtons")
 
 <div class="row">
-    <div id="statistica-grafic" style="width: 900px; height: 600px"></div>
+    <div id="statistica-grafic" style="width: 100%; height: 600px"></div>
 </div>
 
 
 @section Scripts{
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script>
-        google.charts.load('current', { 'packages': ['line'] });
-        //google.charts.setOnLoadCallback(drawChart);
+        google.charts.load('current', { packages: ['corechart', 'line'] });
         var dataTable = {};
 
 
@@ -68,9 +67,8 @@
                 }
             };
 
-            var chart = new google.charts.Line(document.getElementById('statistica-grafic'));
-
-            chart.draw(dataTable, google.charts.Line.convertOptions(options));
+            var chart = new google.visualization.LineChart(document.getElementById('statistica-grafic'));
+            chart.draw(dataTable, options);
         }
 
 
