--- a/LicentaApp/Views/Rapoarte/TopLentileVandute.cshtml
+++ b/LicentaApp/Views/Rapoarte/TopLentileVandute.cshtml
@@ -11,7 +11,7 @@
 
 @using (Ajax.BeginForm("TopLentileVandute_Data", "Rapoarte", new AjaxOptions { UpdateTargetId = "report-container", InsertionMode = InsertionMode.Replace }))
 {
-    @Html.Partial("Rapoarte/_ReportButtons")
+    @Html.Partial("Rapoarte/_ReportButtons_HasDefaultValues")
 }
 
 
