--- a/LicentaApp/Views/Rapoarte/TopOchelariSoare_CantitatiVandute.cshtml
+++ b/LicentaApp/Views/Rapoarte/TopOchelariSoare_CantitatiVandute.cshtml
@@ -10,7 +10,7 @@
 
 @using (Ajax.BeginForm("TopOchelariSoare_Data", "Rapoarte", new AjaxOptions { UpdateTargetId = "report-container", InsertionMode = InsertionMode.Replace }))
 {
-    @Html.Partial("Rapoarte/_ReportButtons")
+    @Html.Partial("Rapoarte/_ReportButtons_HasDefaultValues")
 }
 
 <div id="report-container">
