--- a/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaVanzari_Grafic.cshtml
+++ b/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaVanzari_Grafic.cshtml
@@ -1,6 +1,4 @@
-﻿@model System.Data.Entity.Core.Objects.ObjectResult<GetStatisticaUtilizatoriDupaVanzari_Result>
-
-@{
+﻿@{
     ViewBag.Title = "StatisticaUtilizatoriDupaVanzari_Grafic";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -20,7 +18,9 @@
 @section Scripts{
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script>
-        var model = @Html.Raw(Json.Encode(this.Model));
+        var dataTable = {};
+        google.charts.load('current', { packages: ['corechart'] });
+
 
         function createDataTable(items) {
             var result = [];
@@ -32,10 +32,6 @@
 
             return result;
         }
-
-        var dataTable = createDataTable(model);
-        google.charts.load('current', { packages: ['corechart'] });
-        google.charts.setOnLoadCallback(drawChart);
 
         function drawChart() {
             var data = google.visualization.arrayToDataTable(dataTable);
