--- a/LicentaApp/Views/Rapoarte/TopRameVandute.cshtml
+++ b/LicentaApp/Views/Rapoarte/TopRameVandute.cshtml
@@ -12,7 +12,7 @@
 
 @using (Ajax.BeginForm("TopRameVandute_Data", "Rapoarte", new AjaxOptions { UpdateTargetId = "report-container", InsertionMode = InsertionMode.Replace }))
 {
-    @Html.Partial("Rapoarte/_ReportButtons")
+    @Html.Partial("Rapoarte/_ReportButtons_HasDefaultValues")
 }
 
 
