--- a/LicentaApp/Views/Rapoarte/ComparatieMagazineDupaVanzari_Grafic.cshtml
+++ b/LicentaApp/Views/Rapoarte/ComparatieMagazineDupaVanzari_Grafic.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="row">
-    <h4 class="report-title">Comparatie vanzari intre magazine</h4>
+    <h4 class="report-title">Comparatia vanzarilor magazinelor</h4>
 </div><div class="row">
     @if (ViewData.ContainsKey(AppConstants.MagazineOptions))
     {
