--- a/LicentaApp/Views/Rapoarte/Index.cshtml
+++ b/LicentaApp/Views/Rapoarte/Index.cshtml
@@ -10,7 +10,7 @@
 
 
         <tr>
-            <td><b>Top vanzari lentile soare in functie de cantitatile vandute</b></td>
+            <td><b>Top vanzari lentile in functie de cantitatile vandute</b></td>
             <td><a href="@Url.Action("TopLentileVandute")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td></td>
         </tr>
@@ -31,22 +31,22 @@
             <td><a href="@Url.Action("TopProfesii_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
         </tr>
         <tr>
-            <td><b>Statistica Vanzari Magazine in functie de Totalul Veniturilor</b></td>
+            <td><b>Statistica magazine in functie de totalul vanzarilor</b></td>
             <td><a href="@Url.Action("StatisticaMagazinDupaVanzari")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td><a href="@Url.Action("StatisticaMagazinDupaVanzari_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
         </tr>
         <tr>
-            <td><b>Statistica Vanzari Magazine in functie de cantitatile vandute</b></td>
+            <td><b>Statistica magazine in functie de cantitatile vandute</b></td>
             <td><a href="@Url.Action("StatisticaMagazineDupaCantitati")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td><a href="@Url.Action("StatisticaMagazineDupaCantitati_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
         </tr>
         <tr>
-            <td><b>Statistica Vanzari Utilizatori in functie de Totalul Veniturilor</b></td>
+            <td><b>Statistica utilizatori in functie de totalul vanzarilor</b></td>
             <td><a href="@Url.Action("StatisticaUtilizatoriDupaVanzari")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td><a href="@Url.Action("StatisticaUtilizatoriDupaVanzari_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
         </tr>
         <tr>
-            <td><b>Statistica Vanzari Utilizatori in functie de cantitatile vandute</b></td>
+            <td><b>Statistica utilizatori in functie de cantitatile vandute</b></td>
             <td><a href="@Url.Action("StatisticaUtilizatoriDupaCantitati")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td><a href="@Url.Action("StatisticaUtilizatoriDupaCantitati_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
         </tr>
