--- a/LicentaApp/Views/Rapoarte/IstoricPreturi_Grafic.cshtml
+++ b/LicentaApp/Views/Rapoarte/IstoricPreturi_Grafic.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="row">
-    <h4 class="report-title">Evolutia pretului unui produs</h4>
+    <h4 class="report-title">Analiza evolutiei pretului unui produs</h4>
 </div><div class="row">
     @if (ViewData.ContainsKey(AppConstants.ProduseOptions))
     {
