--- a/LicentaApp/Views/Rapoarte/StatisticaMagazinDupaVanzari_Grafic.cshtml
+++ b/LicentaApp/Views/Rapoarte/StatisticaMagazinDupaVanzari_Grafic.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="row">
-    <h4 class="report-title">Statistica Vanzari Magazine</h4>
+    <h4 class="report-title">Statistica magazine in functie de totalul vanzarilor</h4>
 </div>
 
 @Html.Partial("Rapoarte/_ReportButtons")
