--- a/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaCantitati_Grafic.cshtml
+++ b/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaCantitati_Grafic.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="row">
-    <h4 class="report-title">Statistica Vanzari Magazine</h4>
+    <h4 class="report-title">Statistica utilizatori in functie de cantitatile vandute</h4>
 </div>
 
 @Html.Partial("Rapoarte/_ReportButtons")
