--- a/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaVanzari_Grafic.cshtml
+++ b/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaVanzari_Grafic.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="row">
-    <h4 class="report-title">Statistica Vanzari Utilizatori</h4>
+    <h4 class="report-title">Statistica Utilizatori in functie de totalul vanzarilor</h4>
 </div>
 
 @Html.Partial("Rapoarte/_ReportButtons")
