--- a/LicentaApp/Views/Rapoarte/TopProfesii.cshtml
+++ b/LicentaApp/Views/Rapoarte/TopProfesii.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col m11">
-        <h4 class="report-title">Statistica in functie de profesii</h4>
+        <h4 class="report-title">Top vanzari pe oras in functie de profesie</h4>
     </div>
     <div class="col m1">
         <a class="btn-floating btn-large chart-url-icon waves-effect waves-light red" href="@Url.Action("TopProfesii_Grafic")"><i class="fas fa-chart-bar fa-2x"></i></a>
