--- a/LicentaApp/Views/Rapoarte/TopProfesii_Grafic.cshtml
+++ b/LicentaApp/Views/Rapoarte/TopProfesii_Grafic.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="row">
-    <h4 class="report-title">Statistica in functie de profesii</h4>
+    <h4 class="report-title">Top vanzari pe oras in functie de profesie</h4>
 </div>
 
 <div class="row">
