--- a/LicentaApp/Views/Rapoarte/VanzariTotalePeLuni.cshtml
+++ b/LicentaApp/Views/Rapoarte/VanzariTotalePeLuni.cshtml
@@ -5,7 +5,7 @@
     }
 
     <div class="row">
-        <h4 class="report-title">Vanzari totale/luni</h4>
+        <h4 class="report-title">Vanzari totale pe luna</h4>
     </div>
 
     <table class="highlight">
