--- a/LicentaApp/Views/Rapoarte/StatisticaMagazinDupaVanzari.cshtml
+++ b/LicentaApp/Views/Rapoarte/StatisticaMagazinDupaVanzari.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="row">
     <div class="col m11">
-        <h4 class="report-title">Statistica Vanzari Magazine</h4>
+        <h4 class="report-title">Statistica magazine in functie de totalul vanzarilor</h4>
     </div>
     <div class="col m1">
         <a class="btn-floating btn-large chart-url-icon waves-effect waves-light red" href="@Url.Action("StatisticaMagazinDupaVanzari_Grafic")"><i class="fas fa-chart-bar fa-2x"></i></a>
