--- a/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaCantitati.cshtml
+++ b/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaCantitati.cshtml
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col m11">
-        <h4 class="report-title">Statistica Vanzari Utilizatori in functie de Cantitati</h4>
+        <h4 class="report-title">Statistica utilizatori in functie de cantitatile vandute</h4>
     </div>
     <div class="col m1">
         <a class="btn-floating btn-large chart-url-icon waves-effect waves-light red" href="@Url.Action("StatisticaUtilizatoriDupaCantitati_Grafic")"><i class="fas fa-chart-bar fa-2x"></i></a>
