--- a/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaVanzari.cshtml
+++ b/LicentaApp/Views/Rapoarte/StatisticaUtilizatoriDupaVanzari.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col m11">
-        <h4 class="report-title">Statistica Vanzari Utilizatori</h4>
+        <h4 class="report-title">Statistica Utilizatori in functie de totalul vanzarilor</h4>
     </div>
     <div class="col m1">
         <a class="btn-floating btn-large chart-url-icon waves-effect waves-light red" href="@Url.Action("StatisticaUtilizatoriDupaVanzari_Grafic")"><i class="fas fa-chart-bar fa-2x"></i></a>
