--- a/LicentaApp/Views/Shared/Produse/ListaLentileData.cshtml
+++ b/LicentaApp/Views/Shared/Produse/ListaLentileData.cshtml
@@ -1,8 +1,11 @@
 ﻿@using LicentaApp.Domain
+@using LicentaApp.Domain.Auth
 @using LicentaApp.Domain.Metadata
 @using LicentaApp.Domain.ValueObjects
 @model IEnumerable<LentileView>
-
+@{
+    var isAdmin = (User as AppPrincipal).IsInRole(AuthConstants.Roluri.Admin);
+}
 <div id="lista-lentile-data">
     <table class="table">
         <tr>
@@ -53,7 +56,14 @@
                         @Html.DisplayFor(modelItem => item.Pret)
                     </td>
                     <td>
-                        @Html.Partial("_RUDButtons", new Tuple<int, string>(item.Id, "Produse"))
+                        @if (isAdmin)
+                        {
+                            @Html.Partial("_RUDButtons", new Tuple<int, string>(item.Id, "Produse"))
+                        }
+                        else
+                        {
+                            <a href="@Url.Action("Details", "Produse", new { id= item.Id })" class="tooltipped icon-button view-icon" data-position="bottom" data-tooltip="Detalii"><i class="fas fa-info fa-2x"></i></a>
+                        }
                     </td>
                 </tr>
 
